Implement framework for particle simulation (work in progress).
Add support for visual simulation.
Fixes related to particle movement.
Add simulation cases.

--- a/README
+++ b/README
@@ -14,3 +14,12 @@
 *** TODO
 
 * make separate package / system for opengl stuff
+
+
+*** Useful data for newtonian simulations:
+
+Earth:
+- mass: 5.972E24 kg
+- radius: 6371 km
+- escape velocity: 11.2 km/s
+- orbital speed: 8 km/s
