Reorganize sources; move some code to newton.lisp and vector.lisp files.

--- a/README
+++ b/README
@@ -2,3 +2,10 @@ Common Lisp framework for simulation of entities in a 3D space.
 
 Example of simulation - objects moving according to Newton's law of gravity:
 http://www.youtube.com/watch?v=61zzOM91KiU
+
+
+Glossary of terms:
+__________________
+
+
+Particle: an independent body that moves. It has location, velocity, and acceleration.
